# elden-ring-save-parser-lib

./: LICENSE  README.md  pyproject.toml
elden_ring_save_parser_lib/: __init__.py  equipment.py  event_flags.py  exceptions.py  save.py  user_data_10.py  user_data_x.py
examples/: check_corruption.py  fix_torrent.py  modify_stats.py  read_save.py
